<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:rowCount="5"
    android:columnCount="3">

    <Button
        android:id="@+id/family_btn"
        android:text="@string/family"
        android:drawableTop="@drawable/ic_fanily"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/pink"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/religion_btn"
        android:text="@string/religion"
        android:drawableTop="@drawable/ic_religion"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/light_green"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/social_life_btn"
        android:text="@string/social_life"
        android:drawableTop="@drawable/ic_social_life"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/purple"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/career_btn"
        android:text="@string/career"
        android:drawableTop="@drawable/ic_career"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/turbo"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/travel_btn"
        android:text="@string/travel"
        android:drawableTop="@drawable/ic_travel"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/orange"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/health_btn"
        android:text="@string/health"
        android:drawableTop="@drawable/ic_heart_health"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/blue"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/fun_btn"
        android:text="@string/fun"
        android:drawableTop="@drawable/ic_fun"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/deep_orange"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/finance_btn"
        android:text="@string/finance"
        android:drawableTop="@drawable/ic_financial"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/green"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/education_btn"
        android:text="@string/education"
        android:drawableTop="@drawable/ic_education"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/brawn"
        android:textColor="@color/seashell"/>
    <Button
        android:id="@+id/love_btn"
        android:text="@string/love"
        android:drawableTop="@drawable/ic_action_hearts"
        android:drawablePadding="@dimen/space_8"
        android:background="@color/red"
        android:textColor="@color/seashell"/>

</GridLayout>