<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/turbo"
        android:paddingTop="@dimen/padding_24"
        android:paddingStart="@dimen/space_8"
        android:text="Time Reminder"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size_18"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/turbo"
        android:padding="@dimen/space_8"
        android:text="@string/when_due_date"
        android:textSize="@dimen/text_size_14"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/title_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textColor="@color/turbo"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/before"
        android:layout_marginStart="@dimen/space_8"/>
    <Spinner
        android:id="@+id/number_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/unit_spinner"
        app:layout_constraintTop_toBottomOf="@+id/title_before"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginStart="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_8"/>
    <Spinner
        android:id="@+id/unit_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/number_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_before"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginStart="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_8"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_8"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_spinner"
        android:background="@color/fui_transparent"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_8"
        android:layout_marginStart="@dimen/space_8"
        android:layout_marginTop="@dimen/space_8"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:background="@color/fui_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_spinner" />


</android.support.constraint.ConstraintLayout>